# localLatin-webapp

./: .gitignore  AGENT_PLAN.md  CLAUDE.md  README.md  __main__.py  app.py  config.production.yaml  config.py  config.yaml.example  dependencies.py  exceptions.py  models.py  pyproject.toml  requirements.txt
frontend/: index.html  package-lock.json  package.json  tailwind.config.js
frontend/src/: App.tsx  index.css  main.tsx  vite-env.d.ts
frontend/src/api/: client.ts  feedback.ts  models.ts  queries.ts  tokenMap.ts
frontend/src/components/auth/: ReviewerLoginModal.tsx
frontend/src/components/common/: SkeletonLoader.tsx  ThemeToggle.tsx  Toast.tsx  Tooltip.tsx  ViewModeToggle.tsx
frontend/src/components/connections/: ConnectionLine.tsx  ConnectionOverlay.tsx  TokenRefRegistry.tsx  bezierUtils.ts  useConnectionState.ts  useLineUpdater.ts
frontend/src/components/dashboard/: DashboardView.tsx  ModelProgressBars.tsx  RankDistributionChart.tsx  RecentActivityList.tsx  ResumeCard.tsx  ReviewerTable.tsx  StatCard.tsx
frontend/src/components/document/: DocumentHeader.tsx  DocumentPanel.tsx  TokenSpan.tsx
frontend/src/components/empty/: EmptyState.tsx
frontend/src/contexts/: AppContext.tsx  FeedbackContext.tsx  ReviewerContext.tsx  TokenContext.tsx
frontend/src/mock/: handler.ts  predictions.ts  queries.ts  tokenMaps.ts
frontend/src/utils/: colors.ts  keyboard.ts  tokens.ts  wordSimilarity.ts
routers/: feedback.py  predictions.py  queries.py  stats.py  token_map.py
services/: data_store.py  feedback_db.py  text_tokenizer.py  token_map_svc.py
(+21 files in other folders)
